--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -15,7 +15,7 @@
 		"title": "العنوان"
 	},
 	"labels": {
-		"categories": "التصنيفات",
+		"categories": "التصنيفات"
 	},
 	"messages": {
 		"productcreatedsuccessfully": "تم إنشاء المنتج بنجاح",
