Add table translations

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -17,7 +17,8 @@
 		"title": "العنوان"
 	},
 	"labels": {
-		"categories": "التصنيفات"
+		"categories": "التصنيفات",
+    "price": "السعر"
 	},
 	"messages": {
 		"productcreatedsuccessfully": "تم إنشاء المنتج بنجاح",
