--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -8,7 +8,7 @@
     "changeLanguage": "Change Language"
 	},
 	"columns": {
-		"category": "categpry",
+		"category": "category",
 		"description": "description",
 		"id": "Id",
 		"image": "Image",
@@ -17,7 +17,8 @@
 		"title": "title"
 	},
 	"labels": {
-		"categories": "categories"
+		"categories": "Categories",
+    "price": "Price"
 	},
 	"messages": {
 		"productcreatedsuccessfully": "Product created successfully",
